web_server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-web-server-dep
  namespace: project
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: kube-web-server
  template:
    metadata:
      labels:
        app: kube-web-server
    spec:
      volumes:
      - name: project-volume
        persistentVolumeClaim:
          claimName: project-claim
      containers:
      - name: kube-web-server
        image: WEB_SERVER_IMAGE
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        volumeMounts:
        - name: project-volume
          mountPath: /usr/src/app/files
